Refine the site through a major renewal 👗 (#227)
* Various adjustments were made to `font`, `style`, `ARIA`, etc 🧺

* More flexible `ARIA` support 💪

* Use more appropriate structural information (`<aside>` and `doc-footnote`) 🏈

* Do You Want to Know a Secret (part2) 👸

* Major update to cache version 🤴

* Remove unnecessary parameters.

* Correction by review.

* Remove unnecessary parameters.

--- a/scss/_additional-color.scss
+++ b/scss/_additional-color.scss
@@ -1,16 +1,18 @@
 .au-lait,
 .latte {
-  --page-toc-background: #fff8c5;
-  --page-toc-color: #1f2328;
+  --toc-bg: #fff8c5;
+  --toc-fg: #1f2328;
 
   --search-score: #40a02b;
+  --blockquote-color: #9e9e9e;
 }
 
 .frappe,
 .macchiato,
 .mocha {
-  --page-toc-background: #4b2900;
-  --page-toc-color: #f8e3a1;
+  --toc-bg: #4b2900;
+  --toc-fg: #f8e3a1;
 
   --search-score: #00c853;
+  --blockquote-color: #9e9e9e;
 }
