--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -88,7 +88,7 @@
       </div>
 
       <div id="content" class="content">
-        <spacer></spacer>
+        <div></div>
 
         <main id="main">
           <article>
@@ -112,7 +112,7 @@
           </article>
         </main>
 
-        <spacer></spacer>
+        <div></div>
 
         <div id="righttoc"></div>
       </div>
