--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -20,3 +20,7 @@ $code-font-size: 0.725rem;
 
 $color-pink: #ffb2cc;
 $color-purple: #dcb7f1;
+
+:root {
+  --mobile-max-width: #{$mobile-max-width};
+}
