--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -2,7 +2,7 @@ $mobile-max-width: 680px;
 
 $sidebar-width: 12.5rem;
 $pagetoc-width: 12rem;
-$pagetoc-bottom-height: 2.4rem;
+$pagetoc-bottom-shift: 3em;
 
 $scrollbar-webkit-width: 0.5rem;
 $scrollbar-webkit-height: 0.26rem;
