Adopt some of the suggestions from the small comments outside the scope of the diff.

--- a/scss/_search.scss
+++ b/scss/_search.scss
@@ -85,4 +85,9 @@ mark {
   background: linear-gradient(rgba(0, 0, 0, 0) 64%, var(--search-mark-bg));
 
   cursor: pointer;
+
+  &:focus {
+    outline: 2px solid var(--links);
+    outline-offset: 2px;
+  }
 }
