--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -75,7 +75,7 @@
 
     <div id="page">
       <aside id="sidebar" aria-label="Site map">
-        <nav id="sidebar-scrollbox">
+        <nav id="sidebar-scrollbox" role="navigation">
           {{#toc}}{{/toc}}
         </nav>
       </aside>
