--- a/scss/general.scss
+++ b/scss/general.scss
@@ -52,6 +52,10 @@ body {
 }
 
 #sidebar {
+  // The initial state is none, and if necessary, it is changed to block by operation from js.
+  // (I have not tried it in all environments, so I don't know yet if these initial values are correct...)
+  display: none;
+
   scrollbar-color: var(--scrollbar) var(--bg);
 
   ::-webkit-scrollbar {
