--- a/scss/_search.scss
+++ b/scss/_search.scss
@@ -1,7 +1,8 @@
 @use 'variables' as var;
 
-.search-wrapper {
-  flex-basis: 60%;
+#search-wrapper {
+  visibility: hidden;
+  z-index: 1;
 }
 
 #searchbar {
@@ -77,5 +78,17 @@
         font-size: 0.6875rem;
       }
     }
+  }
+}
+
+mark {
+  color: inherit;
+  background: linear-gradient(rgba(0, 0, 0, 0) 64%, var(--search-mark-bg));
+
+  cursor: pointer;
+
+  &:focus {
+    outline: 2px solid var(--links);
+    outline-offset: 2px;
   }
 }
