--- a/scss/general.scss
+++ b/scss/general.scss
@@ -6,7 +6,6 @@
 
 html {
   scroll-behavior: smooth;
-  overflow-x: hidden;
 }
 
 body {
@@ -36,18 +35,27 @@ body {
   }
 }
 
-.page {
-  grid-template-columns: var.$sidebar-width 1fr;
-  min-height: calc(100dvh - var.$menu-bar-height);
+#page {
+  display: grid;
 
-  // For the style attribute, display: grid or block is added from the JS code.
-  // (Specify an initial value to prevent layout shift on PC.)
-  @media only screen and (min-width: var.$mobile-max-width) {
-    display: grid;
+  @media (min-width: var.$mobile-max-width) {
+    grid-template-columns: 1fr var.$pagetoc-width;
+  }
+
+  &.show-sidebar {
+    grid-template-columns: var.$sidebar-width 1fr;
+
+    @media (min-width: var.$mobile-max-width) {
+      grid-template-columns: var.$sidebar-width 1fr var.$pagetoc-width;
+    }
   }
 }
 
-.sidebar {
+#sidebar {
+  // The initial state is none, and if necessary, it is changed to block by operation from js.
+  // (I have not tried it in all environments, so I don't know yet if these initial values are correct...)
+  display: none;
+
   scrollbar-color: var(--scrollbar) var(--bg);
 
   ::-webkit-scrollbar {
@@ -60,7 +68,7 @@ body {
   }
 }
 
-.sidebar-scrollbox {
+#sidebar-scrollbox {
   position: fixed;
   top: var.$menu-bar-height;
   width: var.$sidebar-width;
@@ -68,51 +76,46 @@ body {
 
   bottom: 0;
 
-  @media only screen and (max-width: var.$mobile-max-width) {
-    bottom: var.$pagetoc-bottom-height;
+  @media (max-width: var.$mobile-max-width) {
+    bottom: var.$pagetoc-bottom-shift;
   }
 }
 
-.content {
-  display: grid;
-  grid-template-columns: 1rem 1fr 1rem;
-  column-gap: 1rem;
+main {
+  min-width: 0;
 
-  font-feature-settings: "palt";
+  margin-left: 2em;
+  margin-right: 2em;
 
-  @media only screen and (min-width: var.$mobile-max-width) {
-    grid-template-columns: 1rem 1fr 0 var.$pagetoc-width 0;
+  @media (max-width: var.$mobile-max-width) {
+    margin-bottom: var.$pagetoc-bottom-shift;
   }
+}
 
-  main {
-    min-width: 0;
+article {
+  font-size: var.$base-font-size;
+  font-feature-settings: "palt";
+  letter-spacing: normal;
+  line-height: 1.6;
+  word-break: auto-phrase;
 
-    font-size: var.$base-font-size;
-    letter-spacing: normal;
-    line-height: 1.6;
-    word-break: auto-phrase;
+  a {
 
-    @media only screen and (max-width: var.$mobile-max-width) {
-      margin-bottom: var.$pagetoc-bottom-height;
+    &:link,
+    &:visited {
+      color: var(--links);
+      margin-left: 0.2em;
+      margin-right: 0.2em;
     }
 
-    a {
-
-      &:link,
-      &:visited {
-        color: var(--links);
-        margin-left: 0.2em;
-        margin-right: 0.2em;
+    &.header {
+      &:link {
+        color: var(--fg);
+        text-decoration: none;
       }
 
-      &.header {
-        &:link {
-          color: var(--fg);
-          text-decoration: none;
-        }
-        &:visited {
-          color: var(--fg);
-        }
+      &:visited {
+        color: var(--fg);
       }
     }
   }
@@ -131,9 +134,4 @@ body {
     margin: 1rem auto;
     width: 70%;
   }
-
-}
-
-.hidden {
-  display: none !important;
 }
