Adjustment of features related to the `theme` 🌈

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -43,7 +43,7 @@
             <div class="icon-sidebar fa-icon"></div>
           </button>
 
-          <button popovertarget="theme-list" class="icon-button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
+          <button popovertarget="theme-list" id="theme-selector" class="icon-button" title="Change theme" aria-label="Change theme" aria-haspopup="true" aria-expanded="false" aria-controls="theme-list">
             <div class="icon-theme fa-icon"></div>
           </button>
 
