--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -88,15 +88,15 @@
         <article id="article">
           {{{ content }}}
 
-          <nav class="nav-wrapper" aria-label="Page navigation">
+          <nav id="nav-wrapper" aria-label="Page navigation">
             {{#previous}}
-            <a rel="prev" href="{{ path_to_root }}{{link}}" class="nav-chapters" aria-label="Previous chapter: {{title}}">
+            <a rel="prev" href="{{ path_to_root }}{{link}}" id="nav-chapters" aria-label="Previous chapter: {{title}}">
               <div class="icon-prev fa-icon"></div>
               {{title}}
             </a>
             {{/previous}}
             {{#next}}
-            <a rel="next" href="{{ path_to_root }}{{link}}" class="nav-chapters" aria-label="Next chapter: {{title}}">
+            <a rel="next" href="{{ path_to_root }}{{link}}" id="nav-chapters" aria-label="Next chapter: {{title}}">
               {{title}}
               <div class="icon-next fa-icon"></div>
             </a>
