Apply `transition` effects when switching themes 🐅

--- a/scss/_mdbook-admonish.scss
+++ b/scss/_mdbook-admonish.scss
@@ -3,8 +3,8 @@
   margin: 1em 0;
   padding: 0 0.75rem;
   color: var(--fg);
-  page-break-inside: avoid;
-  background-color: var(--bg);
+  break-inside: avoid;
+  background-color: inherit;
   border: 0 solid black;
   border-inline-start-width: 0.25rem;
   border-radius: 0.2rem;
