fix: Top bar background display is incorrect 🎩
I wanted to apply the transition effect to the top bar as well, and the last time I specified `inheritance`,
the normal background color disappeared...

--- a/scss/general.scss
+++ b/scss/general.scss
@@ -55,7 +55,7 @@ body {
     gap: 1em;
 
     color: var(--icons);
-    background-color: inherit;
+    background-color: var(--bg);
 
     z-index: 10;
     opacity: 0.92;
