--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -79,7 +79,7 @@
 
     <div id="page">
       <aside id="sidebar" aria-label="Site map">
-        <nav id="sidebar-scrollbox" role="navigation"></nav>
+        <nav id="sidebar-scrollbox" role="navigation" aria-live="polite" aria-busy="true"></nav>
       </aside>
 
       <main>
