Improved sidebar behavior - part2 🍌

--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -78,10 +78,7 @@
     </div>
 
     <div id="page">
-      <aside id="sidebar" aria-label="Site map">
-        <nav id="sidebar-scrollbox" role="navigation" aria-live="polite" aria-busy="true"></nav>
-      </aside>
-
+      <aside id="sidebar" aria-label="Site map"></aside>
       <main>
         <article id="article">
           {{{ content }}}
@@ -102,7 +99,6 @@
           </nav>
         </article>
       </main>
-
       <aside id="table-of-contents"></aside>
     </div>
 
