From out of diff range and minor comments (#265) part2 📜
The current approach uses a negative margin-top hack balanced with padding.
Modern browsers support `scroll-margin-top` which is designed specifically for scroll positioning adjustments.

--- a/scss/_additional-admonish.scss
+++ b/scss/_additional-admonish.scss
@@ -1,3 +1,9 @@
+@use 'variables' as var;
+
+.admonition {
+  scroll-margin-top: var.$menu-bar-height;
+}
+
 .admonition-title {
   a {
     text-decoration: none;
