--- a/scss/theme-list.scss
+++ b/scss/theme-list.scss
@@ -1,13 +1,12 @@
 #theme-list {
+  width: 6rem;
   margin: 0 2.4rem;
   padding: 0.4rem;
-  list-style-type: none;
   font-size: 0.7rem;
 
   border-radius: 0.4rem;
 
   .theme {
-    width: 100%;
     border: 0;
     padding: 0.2rem 1.25rem;
     line-height: 1.5rem;
