Reflects the rabbit review.

--- a/scss/chapter.scss
+++ b/scss/chapter.scss
@@ -15,11 +15,11 @@
   &>ol {
     margin-bottom: 2em;
     padding-left: 1em;
-    line-height: 2.2em;
+    line-height: 2.2;
 
     font-family: var.$italic-font;
     font-style: italic;
-    font-size: 0.6875em;
+    font-size: 0.75em;
 
     ol {
       padding-left: 0.7em;
