From out of diff range and minor comments.

--- a/scss/chapter.scss
+++ b/scss/chapter.scss
@@ -1,12 +1,17 @@
 @use 'variables' as var;
 
 #sidebar-scrollbox {
+  bottom: 0;
+
   position: fixed;
   top: var.$menu-bar-height;
   width: var.$sidebar-width;
-  overflow-y: scroll;
 
-  bottom: 0;
+  overflow-y: scroll;
+  overscroll-behavior: contain;
+  -webkit-overflow-scrolling: touch;
+
+  contain: layout style paint;
 
   @media (max-width: var.$mobile-max-width) {
     bottom: var.$pagetoc-bottom-shift;
