--- a/scss/theme-list.scss
+++ b/scss/theme-list.scss
@@ -1,5 +1,7 @@
 #theme-list {
-  width: 6rem;
+  min-width: 6rem;
+  max-width: 100%;
+
   margin: 0 2.4rem;
   padding: 0.4rem;
   font-size: 0.7rem;
