--- a/theme/toc.html.hbs
+++ b/theme/toc.html.hbs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body>
-    <nav id="sidebar-scrollbox" role="navigation" aria-live="polite" aria-busy="true">
+    <nav id="sidebar-scrollbox" role="navigation" aria-live="polite">
       {{#toc}}{{/toc}}
     </nav>
   </body>
