--- a/theme/index.hbs
+++ b/theme/index.hbs
@@ -58,7 +58,7 @@
             </form>
             <div id="searchresults-outer" tabindex="-1" popover>
               <div id="searchresults-header"></div>
-              <ul id="searchresults"></ul>
+              <ul id="searchresults" aria-live="polite" role="status"></ul>
             </div>
           </div>
         </div>
