--- a/scss/general.scss
+++ b/scss/general.scss
@@ -66,12 +66,6 @@ body {
 
       display: flex;
       gap: 0.85em;
-
-      &>#search-wrapper {
-        visibility: hidden;
-        z-index: 9;
-      }
-
     }
 
     &>#book-title {
@@ -131,6 +125,19 @@ body {
   // (As it does not address the case where a user jumps in with the sidebar closed in a large area.)
   @media (max-width: var.$mobile-max-width) {
     display: none;
+  }
+}
+
+#sidebar-scrollbox {
+  position: fixed;
+  top: var.$menu-bar-height;
+  width: var.$sidebar-width;
+  overflow-y: scroll;
+
+  bottom: 0;
+
+  @media (max-width: var.$mobile-max-width) {
+    bottom: var.$pagetoc-bottom-shift;
   }
 }
 
