Improve behavior that feels unnatural 🎿

--- a/scss/general.scss
+++ b/scss/general.scss
@@ -74,7 +74,7 @@ body {
       display: flex;
       gap: 0.85em;
 
-      &>#search-wrapper {
+      &>#searchbar {
         visibility: hidden;
         z-index: 9;
       }
