--- a/scss/search.scss
+++ b/scss/search.scss
@@ -1,4 +1,22 @@
+@use "sass:math";
+
 @use 'variables' as var;
+
+/*
+ * When I try to type on my iPhone, it zooms in on itself and does not release this zoom when I finish typing.
+ * This site considers this behavior undesirable, so we have cheated the system.
+ *
+ * note: iOS automatically zooms when input elements have a font size smaller than 16px.
+ * This mixin maintains a larger base font size while visually scaling down the input, preventing the zoom.
+ */
+@mixin responsive-input($base-font-size, $desired-font-size) {
+  $scale: math.div($desired-font-size, $base-font-size);
+
+  font-size: $base-font-size;
+  transform: scale($scale);
+  transform-origin: left;
+  width: math.div(100%, $scale);
+}
 
 #search-pop {
   width: 84dvw;
@@ -13,7 +31,8 @@
   border-radius: 1rem;
 
   &>#searchbar {
-    width: 50dvw;
+    @include responsive-input(1rem, 0.75rem);
+
     padding: 0.7em 1.4em;
 
     color: var(--searchbar-fg);
